# location-converter-xlsx-csv-pgtable

./: Makefile  PRD.md  README.md  env.example  main.py  pyproject.toml
config/: data_mapping.yaml  database.yaml
data/processed/: bellary_farmers_cleaned_20250613_125203.csv
data/raw/: Bellary.xlsx
notebooks/: 01_data_exploration.ipynb  01_data_exploration.nbconvert.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
scripts/: load_to_postgres.py  setup_database.py
src/: __init__.py  db_loader.py
