[project]
name = "location-converter-xlsx-csv-pgtable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
]
